# llamaimage

./: .gitignore  README.md  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni/: jni_sd.cpp
app/src/main/java/com/micklab/llamaimage/: MainActivity.java  SdModelManager.java  StableDiffusionNative.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-v35/: themes.xml
scripts/: fetch-sdcpp.sh  patch-sdcpp.sh
